# project-template

./: .coverage  .gitignore  README.md  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
ci/: Dockerfile
devops/: .pre-commit-config.yaml
devops/ci/: Dockerfile  docker-compose.yml
docs/: conf.py  development.rst  getting-started.rst  index.rst  tech-stack.rst
docs/_build/html/: .buildinfo  development.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  tech-stack.html
docs/_build/html/.doctrees/: development.doctree  environment.pickle  getting-started.doctree  index.doctree  tech-stack.doctree
docs/_build/html/.doctrees/api/: modules.doctree
docs/_build/html/_sources/api/: modules.rst.txt
docs/_build/html/api/: modules.html
projects/: __init__.py
projects/backend/: example.py
projects/backend/tests/: test_example.py
projects/frontend/: .gitignore  README.md  package-lock.json  package.json
projects/frontend/src/app/: layout.tsx  page.tsx
projects/package/: pyproject.toml
projects/tests/: conftest.py
