[project]
name = "package"
version = "0.1.0"
description = "package"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.3",
    "flake8>=6.1",
    "mypy>=1.5",
    "isort>=5.12",
    "pre-commit>=3.4",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
