[project]
name = "package"
version = "0.1.0"
description = "package"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "pyright>=1.1",
    "pre-commit>=3.4",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
